--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 const dJson = encodeURIComponent(JSON.stringify(data || {}));
 
                 // --- HIER DEINEN LINK EINFÜGEN ---
-                const baseUrl = "	https://www.soscisurvey.de/sozpsy/"; 
+                const baseUrl = "https://www.soscisurvey.de/BA25LeaPaula/""; 
                 
                 // URL bauen mit allen Variablen (c, n, d, g)
                 const finalUrl = `${baseUrl}?q=next&c=${cVal}&n=${count}&d=${dJson}&g=${groupID}`;
